@startuml
title Entity-Relationship Diagram - Gaming Gear Matcher

' --- การตั้งค่าการแสดงผล ---
skinparam linetype ortho
skinparam rectangle {
    shadowing false
    backgroundColor #FFFFFF
    borderColor #333333
}
skinparam ArrowColor #333333


entity "Users" as users {
  + **user_id** {PK} : INT
  --
  * username : VARCHAR
  * password_hash : VARCHAR
  * email : VARCHAR
  * role : ENUM('member', 'admin')
  * created_at : TIMESTAMP
}

entity "Pro_Players" as pro_players {
  + **pro_player_id** {PK} : INT
  --
  * name : VARCHAR
  * team : VARCHAR
  * game : VARCHAR
  * physique_data : JSON
  * image_url : VARCHAR
}

entity "Gears" as gears {
  + **gear_id** {PK} : INT
  --
  * name : VARCHAR
  * type : ENUM('mouse', 'keyboard', 'headset', 'monitor')
  * brand : VARCHAR
  * specifications : JSON
  * image_url : VARCHAR
}

entity "Presets" as presets {
  + **preset_id** {PK} : INT
  --
  # user_id : INT {FK}
  * preset_name : VARCHAR
  * is_public : BOOLEAN
  * created_at : TIMESTAMP
}

entity "Match_History" as match_history {
  + **match_id** {PK} : INT
  --
  # user_id : INT {FK} (nullable)
  # model_id : INT {FK}
  * uploaded_image_url : VARCHAR
  * match_results_json : JSON
  * created_at : TIMESTAMP
}

entity "Match_Ratings" as match_ratings {
    + **rating_id** {PK} : INT
    --
    # match_id : INT {FK}
    # user_id : INT {FK}
    * score : INT (1-5)
    * comment : TEXT
    * created_at : TIMESTAMP
}

entity "AI_Models" as ai_models {
    + **model_id** {PK} : INT
    --
    * model_name : VARCHAR
    * version : VARCHAR
    * is_active : BOOLEAN
    * trained_at : TIMESTAMP
}

' --- ตารางเชื่อมความสัมพันธ์ Many-to-Many ---

entity "Preset_Gears" as preset_gears {
  + **preset_id** {PK, FK} : INT
  + **gear_id** {PK, FK} : INT
}

entity "Pro_Player_Gears" as pro_player_gears {
  + **pro_player_id** {PK, FK} : INT
  + **gear_id** {PK, FK} : INT
}

' Users and Presets (One-to-Many)
users ||--o{ presets : "creates"

' Users and Match_History (One-to-Many)
users ||--o{ match_history : "has"

' Users and Match_Ratings (One-to-Many)
users ||--o{ match_ratings : "gives"

' Match_History and Match_Ratings (One-to-One, technically One-to-Many but usually 1:1)
match_history ||--o{ match_ratings : "can have"

' AI_Models and Match_History (One-to-Many)
ai_models ||--o{ match_history : "is used for"

' Presets and Gears (Many-to-Many)
presets }o--o{ preset_gears
preset_gears o--o{ gears

' Pro_Players and Gears (Many-to-Many)
pro_players }o--o{ pro_player_gears
pro_player_gears o--o{ gears


@enduml
